fix alignments blogCards

--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -30,6 +30,7 @@
    display: grid;
    margin-top: 40vh;
    margin-bottom:-4vh;
+   
 }
 #container-number-mobile{
     display: grid;
@@ -43,6 +44,7 @@
    margin-bottom: 3.3vh;
    margin-left: -16.4vh;
    width: 23.3vh;
+
 }
 
 #circle-number-top{
@@ -173,7 +175,7 @@
  
 }
 #cards-blog-desktop{
- margin-top:-5.5vh;
+ margin-top:-6.5vh;
 }
 #cards-blog-mobile{
     margin-top: -4.1vh;
@@ -238,16 +240,19 @@
 }
 #blog-little-cards {
   width: 24%;
-  margin-left:1.6vh;
+  margin-left:1.2vh;
+  margin-top:10vh;
 }
-#blog-little-cards img {
-    margin-bottom:-2.9vh;
-  }
+/* #blog-little-cards img {
+   
+  } */
 #blog-little-cards h6{
     font-size: 2.1vh;
+    margin-top:2vh;
 }
 #blog-little-cards p{
     font-size: 1.7vh;
+   
 }
 #tendencias-img-card{
  height: 61vh;
